Refactoring: merging KubernetesVerifier and HelmVerifier